--- a/aboutus.html
+++ b/aboutus.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="navbar">
-        <a href="register" onclick="showSection('home')">Home</a>
-        <a href="#" onclick="showSection('about')">About</a>
-        <a href="#" onclick="showSection('services')">Services</a>
-        <a href="#" onclick="showSection('login')">Login</a>
-        </div>
-    <div id="about" class="container">
+        <a href="homepage.html" onclick="showSection('home')">Home</a>
+        <a href="aboutus.html" onclick="showSection('about')">About</a>
+        <a href="servicespage.html" onclick="showSection('services')">Services</a>
+        <a href="loginpage.html" onclick="showSection('login')">Login</a>
+    </div>
+        <div id="about" class="container">
         <h1>About Us</h1>
         <p>We provide top-quality caravans for your travel needs.</p>
         <div class="caravan-gallery">
@@ -30,5 +31,6 @@
             </div>
         </div>
         </div>
+        
 </body>
 </html>
