--- a/addcaravan.html
+++ b/addcaravan.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+    <div class="navbar">
+        <a href="homepage.html" onclick="showSection('home')">Home</a>
+        <a href="aboutus.html" onclick="showSection('about')">About</a>
+        <a href="servicespage.html" onclick="showSection('services')">Services</a>
+        <a href="loginpage.html" onclick="showSection('login')">Login</a>
+    </div>
     <div id="add-caravan" class="container" style="display: none; background: teal;">
         <h1>Add Your Caravan</h1>
         <div class="form-container">
@@ -24,5 +31,6 @@
             </form>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
