--- a/homepage.html
+++ b/homepage.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="navbar">
-        <a href="#" onclick="showSection('home')">Home</a>
-        <a href="#" onclick="showSection('about')">About</a>
-        <a href="#" onclick="showSection('services')">Services</a>
-        <a href="#" onclick="showSection('login')">Login</a>
-        </div>
+        <a href="homepage.html" onclick="showSection('home')">Home</a>
+        <a href="aboutus.html" onclick="showSection('about')">About</a>
+        <a href="servicespage.html" onclick="showSection('services')">Services</a>
+        <a href="loginpage.html" onclick="showSection('login')">Login</a>
+    </div>
          
         <div id="home" class="container active" style="background: teal;">
         <h1>Welcome to Rent My Caravan</h1>
@@ -104,5 +105,6 @@
             <button class="btn" onclick="showSection('booking')">Book Your Caravan Now</button>
         </div>
         </div>
+        <script src="script.js"></script>
 </body>
 </html>
