--- a/servicespage.html
+++ b/servicespage.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+    <div class="navbar">
+        <a href="homepage.html" onclick="showSection('home')">Home</a>
+        <a href="aboutus.html" onclick="showSection('about')">About</a>
+        <a href="servicespage.html" onclick="showSection('services')">Services</a>
+        <a href="loginpage.html" onclick="showSection('login')">Login</a>
+    </div>
     <div id="services" class="container">
         <h1>Our Services</h1>
         <p>We offer a variety of services to make your caravan experience unforgettable:</p>
@@ -32,5 +39,6 @@
             </div>
         </div>
         </div>
+        <script src="script.js"></script>
 </body>
 </html>
