--- a/aboutus.html
+++ b/aboutus.html
@@ -9,7 +9,7 @@
 <body>
     <div class="navbar">
         <a href="homepage.html" onclick="showSection('home')">Home</a>
-        <a href="aboutus.html" onclick="showSection('about')">About</a>
+        <a href="aboutus.html">About</a>
         <a href="servicespage.html" onclick="showSection('services')">Services</a>
         <a href="loginpage.html" onclick="showSection('login')">Login</a>
     </div>
@@ -31,6 +31,6 @@
             </div>
         </div>
         </div>
-        
+        <script src="script.js"></script>
 </body>
 </html>
