Navbar pages working

--- a/aboutus.html
+++ b/aboutus.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="homepage.html" onclick="showSection('home')">Home</a>
+        <a href="homepage.html">Home</a>
         <a href="aboutus.html">About</a>
-        <a href="servicespage.html" onclick="showSection('services')">Services</a>
-        <a href="loginpage.html" onclick="showSection('login')">Login</a>
+        <a href="servicespage.html">Services</a>
+        <a href="loginpage.html">Login</a>
     </div>
-        <div id="about" class="container">
+        <div id="about" class="container" style="background: teal;">
         <h1>About Us</h1>
         <p>We provide top-quality caravans for your travel needs.</p>
         <div class="caravan-gallery">
@@ -30,7 +30,7 @@
                 <p>Classic Caravan - A timeless choice for a nostalgic road trip experience.</p>
             </div>
         </div>
-        </div>
-        <script src="script.js"></script>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
