--- a/aboutus.html
+++ b/aboutus.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="homepage.html">Home</a>
-        <a href="aboutus.html">About</a>
-        <a href="servicespage.html">Services</a>
-        <a href="loginpage.html">Login</a>
+        <a href="homepage.html" onclick="showSection('home')">Home</a>
+        <a href="aboutus.html" onclick="showSection('about')">About</a>
+        <a href="servicespage.html" onclick="showSection('services')">Services</a>
+        <a href="loginpage.html" onclick="showSection('login')">Login</a>
     </div>
         <div id="about" class="container" style="background: teal;">
         <h1>About Us</h1>
