--- a/loginpage.html
+++ b/loginpage.html
@@ -21,7 +21,7 @@
         <input type="password" id="login-confirm-password" placeholder="Confirm Password">
         <button onclick="validateLogin()">Login</button>
         <p id="login-error" class="error"></p>
-        <p>Don't have an account? <a href="#" onclick="showSection('register')">Sign Up</a></p>
+        <p>Don't have an account? <a href="registerpage.html" onclick="showSection('register')">Sign Up</a></p>
         </div>
         </div>
     <script src="script.js"></script>
