aboutus and homepage

--- a/homepage.html
+++ b/homepage.html
@@ -12,7 +12,7 @@
         <a href="aboutus.html" onclick="showSection('about')">About</a>
         <a href="servicespage.html" onclick="showSection('services')">Services</a>
         <a href="loginpage.html" onclick="showSection('login')">Login</a>
-        </div>
+    </div>
          
         <div id="home" class="container active" style="background: teal;">
         <h1>Welcome to Rent My Caravan</h1>
@@ -98,6 +98,11 @@
                     <p>Our caravans are equipped with the latest features for a comfortable journey.</p>
                 </div>
             </div>
+        </div>
+        
+        <!-- Call-to-Action Button -->
+        <div style="margin-top: 30px;">
+            <button class="btn" onclick="window.location.href='loginpage.html'">Click to login</button>
         </div>
         </div>
         <script src="script.js"></script>
