--- a/aboutus.html
+++ b/aboutus.html
@@ -4,29 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>About Us - Rent My Caravan</title>
 </head>
 <body>
     <div class="navbar">
-        <a href="homepage.html" onclick="showSection('home')">Home</a>
-        <a href="aboutus.html" onclick="showSection('about')">About</a>
-        <a href="servicespage.html" onclick="showSection('services')">Services</a>
-        <a href="loginpage.html" onclick="showSection('login')">Login</a>
+        <a href="homepage.html">Home</a>
+        <a href="aboutus.html">About</a>
+        <a href="servicespage.html">Services</a>
+        <a href="loginpage.html">Login</a>
     </div>
-        <div id="about" class="container" style="background: teal;">
+    <div id="about" class="container" style="background: teal; padding: 20px;">
         <h1>About Us</h1>
-        <p>We provide top-quality caravans for your travel needs.</p>
-        <div class="caravan-gallery">
-            <div class="caravan-item">
-                <img src="https://i.pinimg.com/550x/93/a3/8e/93a38e577b1daf238b4c7d0f4fb4d338.jpg" alt="Luxury Caravan">
+        <p>We provide top-quality caravans for your travel needs, ensuring comfort, safety, and unforgettable experiences.</p>
+        <p><strong>Our Mission:</strong> To make your travel dreams come true by offering a wide range of caravans tailored to your unique needs.</p>
+        <button onclick="window.location.href='servicespage.html'" style="margin: 20px 0; padding: 10px 20px; background: orange; color: white; border: none; cursor: pointer;">Explore Our Services</button>
+        <div class="caravan-gallery" style="display: flex; gap: 20px; flex-wrap: wrap;">
+            <div class="caravan-item" style="flex: 1; min-width: 300px;">
+                <img src="https://i.pinimg.com/550x/93/a3/8e/93a38e577b1daf238b4c7d0f4fb4d338.jpg" alt="Luxury Caravan" style="width: 100%; border-radius: 10px;">
                 <p>Luxury Caravan - Perfect for family trips with all modern amenities.</p>
             </div>
-            <div class="caravan-item">
-                <img src="https://i.ytimg.com/vi/Diy0kBC5abo/maxresdefault.jpg" alt="Compact Caravan">
+            <div class="caravan-item" style="flex: 1; min-width: 300px;">
+                <img src="https://i.ytimg.com/vi/Diy0kBC5abo/maxresdefault.jpg" alt="Compact Caravan" style="width: 100%; border-radius: 10px;">
                 <p>Compact Caravan - Ideal for couples or solo travelers seeking adventure.</p>
             </div>
-            <div class="caravan-item">
-                <img src="https://www.sussexsportscars.co.uk/car_images/uploads/2014/10/001.jpg" alt="Classic Caravan">
+            <div class="caravan-item" style="flex: 1; min-width: 300px;">
+                <img src="https://www.sussexsportscars.co.uk/car_images/uploads/2014/10/001.jpg" alt="Classic Caravan" style="width: 100%; border-radius: 10px;">
                 <p>Classic Caravan - A timeless choice for a nostalgic road trip experience.</p>
             </div>
         </div>
