--- a/loginpage.html
+++ b/loginpage.html
@@ -17,11 +17,12 @@
         <div class="form-container">
         <h1>Login</h1>
         <input type="text" id="login-username" placeholder="Username">
-        <input type="password" id="login-password" placeholder="Password">
-        <input type="password" id="login-confirm-password" placeholder="Confirm Password">
+        <input type="password" id="login-password" placeholder="Password">        
         <button onclick="validateLogin()">Login</button>
+        <a href="userhomepage.php" onclick="showSection('login')">Login</a>
+
         <p id="login-error" class="error"></p>
-        <p>Don't have an account? <a href="registerpage.html" onclick="showSection('register')">Sign Up</a></p>
+        <p>Don't have an account? <a href="registerpage.php" onclick="showSection('register')">Sign Up</a></p>
         </div>
         </div>
     <script src="script.js"></script>
