login and userhomepage working

--- a/aboutus.html
+++ b/aboutus.html
@@ -11,7 +11,7 @@
         <a href="homepage.html">Home</a>
         <a href="aboutus.html">About</a>
         <a href="servicespage.html">Services</a>
-        <a href="loginpage.html">Login</a>
+        <a href="loginpage.php">Login</a>
     </div>
     <div id="about" class="container" style="background: teal; padding: 20px;">
         <h1>About Us</h1>
