--- a/addcaravan.html
+++ b/addcaravan.html
@@ -11,7 +11,7 @@
         <a href="homepage.html" onclick="showSection('home')">Home</a>
         <a href="aboutus.html" onclick="showSection('about')">About</a>
         <a href="servicespage.html" onclick="showSection('services')">Services</a>
-        <a href="loginpage.html" onclick="showSection('login')">Login</a>
+        <a href="loginpage.php" onclick="showSection('login')">Login</a>
     </div>
     <div id="add-caravan" class="container" style="display: none; background: teal;">
         <h1>Add Your Caravan</h1>
