--- a/homepage.html
+++ b/homepage.html
@@ -11,7 +11,7 @@
         <a href="homepage.html" onclick="showSection('home')">Home</a>
         <a href="aboutus.html" onclick="showSection('about')">About</a>
         <a href="servicespage.html" onclick="showSection('services')">Services</a>
-        <a href="loginpage.html" onclick="showSection('login')">Login</a>
+        <a href="loginpage.php" onclick="showSection('login')">Login</a>
     </div>
          
         <div id="home" class="container active" style="background: teal;">
